# ydb_instrumentor

./: Makefile  README.md  main.py  pyproject.toml  ruff.toml
o11y/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
tests/: conftest.py  helpers.py  main.py  o11y.py  test_instrumentation.py  test_queries.py  ydb_container.py
ydb_instrumentor/: __init__.py  ydb_instrumentor.py
