[project]
name = "ydb-investigations"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opentelemetry-api>=1.32.1",
    "opentelemetry-exporter-otlp>=1.32.1",
    "opentelemetry-instrumentation-grpc>=0.53b1",
    "opentelemetry-sdk>=1.32.1",
    "ruff>=0.11.8",
    "ydb>=3.21.1",
    "testcontainers>=4.0.0",
]

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
ignore = [
    "D",
    "ANN101",
    "ANN102",
    "ANN401",
    "FIX002",
    "TD001",
    "TD002",
    "TD003",
    "PERF401",
    "TID",
    "FBT",
    "PLR0913",
    "TCH002",
    "TCH003",
    "ISC001",
    "COM812",
    "INP001",
    "EXE002",
]

select = ["ALL"]

fixable = ["ALL"]
unfixable = ["B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = true
